# VG_MLOps23

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  infer.py  model.py  pyproject.toml  train.py
.dvc/: config
conf/: __init__.py  config.py  config.yaml
conf/mlflow/: mlflow_conf.py  mlflow_conf.yaml
conf/model/: model_conf.py  model_conf.yaml
conf/train/: train_conf.py  train_conf.yaml
conf/train/params/: train_params.py  train_params.yaml
