[tool.poetry]
name = "vg-mlops23"
version = "0.1.0"
description = ""
authors = ["Vigolod <109913264+Vigolod@users.noreply.github.com>"]
license = "GNU-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.1.1"
torchvision = "^0.16.1"
matplotlib = "^3.8.2"
numpy = "^1.26.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
dvc = "^3.31.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 90
target-version = ["py310"]

[tool.isort]
src_paths = ["vg-mlops23"]
profile = "black"
line_length = 90
lines_after_imports = 2
